SubMenu opacity transition no longer flicker * If you used the SubMenu with an css transition of opacity, the SubMenu had possible rearranged during fade out. * Now every SubMenu have a default transition of 1ms, so that the transitionend will always trigger * You can override the transition-duration with css

--- a/examples/react-contextmenu.css
+++ b/examples/react-contextmenu.css
@@ -12,6 +12,7 @@
     outline: none;
     opacity: 0;
     pointer-events: none;
+    transition: opacity 250ms ease !important;
 }
 
 .react-contextmenu.react-contextmenu--visible {
